--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ header nav ul li a:hover {
   background-position: center center; 
   background-attachment: fixed; 
   
-  padding: 150px 0;
+  padding: 200px 0 100px 0;
   text-align: center;
   position: relative; 
 }
