--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ header nav ul li a:hover {
 
 
 .hero {
-  background-image:  linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('img/fundo-hero.png');
+  background-image:  linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('imagens_ibv/coral/coral_apresentação_campal1.jpg');
   background-size: cover; 
   background-position: center center; 
   background-attachment: fixed; 
@@ -391,7 +391,7 @@ header nav ul li a:hover {
 /* Stories Section */
 .stories {
   padding: 80px 0;
-  background-image:  linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('img/fundo-historias.png');
+  background-image:  linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('imagens_ibv/coral/coral_apresentacao_campal3.jpg');
   background-size: cover;
   background-position:initial;
   overflow: hidden;
